[package]
name = "lispbm-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
derivative = "2.2.0"
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_toml = "0.0.1"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tower-lsp-server = "0.23"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tree-sitter = "0.26.9"
tree-sitter-lispbm = { git = "https://github.com/cortex/tree-sitter-lispbm.git" } # Or version from crates.io
walkdir = "2.5.0"
